[gd_scene load_steps=2 format=3 uid="uid://d3qmm8xbp8af5"]

[ext_resource type="Script" uid="uid://l30h17p5ti5j" path="res://Scenes/Main_Menu/Settings/Scripts/fov_slider.gd" id="1_mqea8"]

[node name="Fov_Slider" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mqea8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_right = 1309.0
offset_bottom = 55.0

[node name="FOV" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Camera FOV"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="FOV_Slider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(535, 32)
layout_mode = 2
size_flags_vertical = 4
min_value = 60.0
max_value = 120.0
value = 80.0

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="FOV_num" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(430, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "80.0"
horizontal_alignment = 1

[connection signal="value_changed" from="HBoxContainer/FOV_Slider" to="." method="_on_h_slider_value_changed"]
